# single-task-chemistry-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: gsm8k_qwen05b.yaml  miq_cg_carbon_atom.yaml  miq_cg_ring_count.yaml  miq_experiment_suite.yaml  miq_mc_composition.yaml  miq_mc_topology.yaml  miq_mi_ring_aromatic.yaml  miq_multitask_adaptive.yaml  miq_multitask_adaptive_train.yaml  miq_multitask_balanced.yaml  miq_multitask_balanced_train.yaml  miq_multitask_pooled.yaml  miq_multitask_pooled_train.yaml  miq_sc_aromatic_ring.yaml  miq_sc_carbon_atom.yaml  miq_sc_fused_ring.yaml  miq_sc_hba.yaml  miq_sc_hetero_atom.yaml  miq_sc_ring_count.yaml  miq_sc_rotatable_bond.yaml  miq_si_aromatic_ring.yaml  miq_si_carbon_atom.yaml  miq_si_hetero_atom.yaml  miq_si_ring.yaml  miq_si_ring_indices.yaml  moleculariq_qwen05b.yaml
scripts/: auto_train_compare.py  cross_generalization.py  evaluate.py  evaluate_multitask.py  plot_training.py  preprocess.py  preprocess_multitask.py  train.py
src/grpo_reasoning/: cli.py  data.py  eval.py  multitask.py  plotting.py  prompts.py  rewards.py  train.py  utils.py
src/grpo_reasoning/tasks/: __init__.py  base.py  gsm8k.py  moleculariq.py
tests/: test_multitask.py  test_rewards.py
